ros2_ws/4-16/log/build_2025-04-09_14-45-39/control/stderr.log
  File "/mnt/c/ros2_ws/3-26-SRC/install/control/lib/python3.10/site-packages/control/ex1.py", line 54
    cmd_vel.angular.z = ???
                        ^
SyntaxError: invalid syntax

